tests/diagnostics_golden/diag_rule5_div_zero.txt
Diagnostics Golden: Rule 5 Division by Zero
Source: tests/negative/neg_rule5_div_zero.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_rule5_div_zero.safe:19:46: error: floating divisor is not provably nonzero
  |
  | 19 |       return Measurement (Long_Float (Value) / Long_Float (Scale));
  |    |                                                ^~~~~~~~~~~~~~~~~~
  |
  note: division by a value that may be 0.0 can produce infinity or NaN.
------------------------------------------------------------------------
